compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_constructor.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 392
expression: "record MyType { The_Constructor(Int) }"
---
----- BEFORE ACTION
record MyType { The_Constructor(Int) }
                 ↑                    


----- AFTER ACTION
record MyType { TheConstructor(Int) }
