compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_constructor_arg.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 401
expression: "record IntWrapper { IntWrapper(innerInt: Int) }"
---
----- BEFORE ACTION
record IntWrapper { IntWrapper(innerInt: Int) }
                    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑       


----- AFTER ACTION
record IntWrapper { IntWrapper(inner_int: Int) }
