compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_custom_type.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 412
expression: "record Boxed_value { Box(Int) }"
---
----- BEFORE ACTION
record Boxed_value { Box(Int) }
       ▔▔▔▔▔↑                  


----- AFTER ACTION
record BoxedValue { Box(Int) }
