compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 432
expression: "fn doStuff() {}"
---
----- BEFORE ACTION
fn doStuff() {}
▔▔▔▔▔▔▔▔▔▔▔▔▔↑ 


----- AFTER ACTION
fn do_stuff() {}
