compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_function_type_parameter_name.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 666
expression: "fn identity(value: someType) { value }"
---
----- BEFORE ACTION
fn identity(value: someType) { value }
                   ▔▔▔▔▔▔▔▔↑          


----- AFTER ACTION
fn identity(value: some_type) { value }
