compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_list_pattern.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 498
expression: "pub fn main() {\n    let assert [theElement] = [9.4]\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert [theElement] = [9.4]
        ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   
}


----- AFTER ACTION
pub fn main() {
    let assert [the_element] = [9.4]
}
