compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_list_pattern_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 509
expression: "pub fn main() {\n    let assert [_elemOne] = [False]\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert [_elemOne] = [False]
                     ↑             
}


----- AFTER ACTION
pub fn main() {
    let assert [_elem_one] = [False]
}
