compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_parameter.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 316
expression: "fn add(numA: Int, num_b: Int) { numA + num_b }"
---
----- BEFORE ACTION
fn add(numA: Int, num_b: Int) { numA + num_b }
       ↑                                      


----- AFTER ACTION
fn add(num_a: Int, num_b: Int) { numA + num_b }
