compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_parameter_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 345
expression: "fn ignore(_ignoreMe: Bool) { 98 }"
---
----- BEFORE ACTION
fn ignore(_ignoreMe: Bool) { 98 }
   ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   


----- AFTER ACTION
fn ignore(_ignore_me: Bool) { 98 }
