compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_parameter_discard_name2.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 354
expression: "fn ignore(labelled_discard _ignoreMe: Bool) { 98 }"
---
----- BEFORE ACTION
fn ignore(labelled_discard _ignoreMe: Bool) { 98 }
   ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑   


----- AFTER ACTION
fn ignore(labelled_discard _ignore_me: Bool) { 98 }
