compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__rename_invalid_parameter_label.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 374
expression: "fn func(thisIsALabel param: Int) { param }"
---
----- BEFORE ACTION
fn func(thisIsALabel param: Int) { param }
        ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑             


----- AFTER ACTION
fn func(this_is_a_label param: Int) { param }
